<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#fbffcd"
    android:orientation="vertical">

    <TextView
        android:id="@+id/taskId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_id"
        android:textAlignment="center"
        android:visibility="gone" />

    <TextView
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:background="#4cd6e6"
        android:padding="10dp"
        android:text="@string/date"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:text="@string/title" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/description"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/description"
            android:padding="10dp" />

        <ImageView
            android:id="@+id/status"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:background="@drawable/ic_action_inc"
            android:clickable="true"
            android:contentDescription="@string/incomplete_task" />
    </RelativeLayout>

    <TextView
        android:id="@+id/timestamp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/date"
        android:padding="10dp" />

</LinearLayout>